--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -148,12 +148,12 @@
                 localStorage.setItem('userInfo', JSON.stringify(data));
 
                 if (userInfo.roles.includes("ROLE_ADMIN")) {
-                    window.location.href = "/auth/admin/dashboard";
+                    window.location.href = "http://localhost:8080/admin";
                 } else if (userInfo.roles.includes("ROLE_USER")) {
                     window.location.href = "http://localhost:8080";
 
-                } else if (userInfo.roles.includes("ROLE_COMPANY")) {
-                    window.location.href = "/company-account";
+                } else if (userInfo.roles.indexOf("ROLE_COMPANY")!== -1) {
+                    window.location.href = "/job-posts/create";
                 } else {
                     window.location.href = "/auth/default/dashboard";
                 }
